--- a/src/views/MainView/MainView.css
+++ b/src/views/MainView/MainView.css
@@ -12,6 +12,10 @@
   text-align: center;
 }
 
+td.instalment {
+  background: rgb(132, 128, 255);
+}
+
 .expenses-modal {
   background: rgba(0, 0, 0, .35);
   position: absolute;
